--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <!-- This is the analog synth part -->
         <div id="synthControls">
           <div class="osc">
-            <button class="defOscillator" data-name="sine"><img class="oscType" src="img/icons/sine.png" width="20px"></button>
-            <button class="defOscillator" data-name="square"><img class="oscType" src="img/icons/square.png" width="20px"></button>
-            <button class="defOscillator" data-name="sawtooth"><img class="oscType" src="img/icons/sawtooth.png" width="20px"></button>
+            <button class="defOscillator" id="sine" data-name="sine" style="background-color: rgba(255,255,255,0.4);"><img class="oscType" src="img/icons/sine.png" width="20px"></button>
+            <button class="defOscillator" id="square" data-name="square"><img class="oscType" src="img/icons/square.png" width="20px"></button>
+            <button class="defOscillator" id="sawtooth" data-name="sawtooth"><img class="oscType" src="img/icons/sawtooth.png" width="20px"></button>
             <button id="test"  style="display: none;">DEBUG</button><!-- just for test purspose -->
           </div>
           <div class="osc">
-            <button class="defOscillator2" data-name="sine"><img class="oscType" src="img/icons/sine.png" width="20px"></button>
-            <button class="defOscillator2" data-name="square"><img class="oscType" src="img/icons/square.png" width="20px"></button>
-            <button class="defOscillator2" data-name="sawtooth"><img class="oscType" src="img/icons/sawtooth.png" width="20px"></button>
+            <button class="defOscillator2" id="sine2" data-name="sine" style="background-color: rgba(255,255,255,0.4);"><img class="oscType" src="img/icons/sine.png" width="20px"></button>
+            <button class="defOscillator2" id="square2" data-name="square"><img class="oscType" src="img/icons/square.png" width="20px"></button>
+            <button class="defOscillator2" id="sawtooth2" data-name="sawtooth"><img class="oscType" src="img/icons/sawtooth.png" width="20px"></button>
             <button id="test" style="display: none;">DEBUG</button><!-- just for test purspose -->
           </div>
           <div id="masterVol">
